# Traffic-Analyzer

./: .gitignore  App_8h.html  App_8h_source.html  CMakeLists.txt  Doxyfile  Doxyfile.documentation  Doxyfile.ghpages  HostInfo_8h.html  HostInfo_8h_source.html  HttpTrafficStats_8h.html  HttpTrafficStats_8h_source.html  ITrafficStats_8h.html  ITrafficStats_8h_source.html  README.md  README_8md.html  TrafficAnalyzer_8h.html  TrafficAnalyzer_8h_source.html  annotated.html  classA-members.html  classA.html  classB-members.html  classB.html  classHttpTrafficStats-members.html  classHttpTrafficStats.html  classITrafficStats-members.html  classITrafficStats.html  classTrafficAnalyzer-members.html  classTrafficAnalyzer.html  classes.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  hierarchy.html  index.html  main_8cpp.html  md_README.html  (+11 more)
.github/workflows/: main.yml
docs/: CMakeLists.txt  Doxyfile.documentation
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  files_0.js  files_1.js  files_2.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  (+13 more)
source/: App.h  AppHandler.h  Application.h  HostInfo.h  HttpStatsCollector.cpp  HttpStatsCollector.h  HttpTrafficStats.h  IHttpStatCollector.h  ITrafficStats.h  TrafficAnalyzer.h  main.cpp
tests/: AppNamespaceTest.h  CMakeLists.txt  HttpTrafficStatsTests.h  TrafficAnalyzerTests.h  test.cpp
